8356599: [lworld] C2 incorrectly folds array object klass load for atomic arrays